# irdl

./: .gitignore  CITATION.cff  README.md  api_ref.html  cli_ref.html  datasets.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/actions/smoke-tests/: action.yml
.github/workflows/: docs.yml  links.yml  linting.yml  pypi.yml  release.yml  tests.yml
_autosummary/: irdl.downloader.html  irdl.fabian.html  irdl.get_fabian.html  irdl.get_miracle.html  irdl.get_sriracha.html  irdl.ista.html  irdl.miracle.html  irdl.repositories.html  irdl.sofa.html  irdl.utils.html
_sources/: api_ref.rst.txt  datasets.rst.txt  index.rst.txt
_sources/_autosummary/: irdl.fabian.rst.txt  irdl.get_sriracha.rst.txt  irdl.ista.rst.txt  irdl.miracle.rst.txt  irdl.repositories.rst.txt  irdl.sofa.rst.txt  irdl.utils.rst.txt
docs/: Makefile  api_ref.rst  cli-help.txt  cli-miracle-help.txt  conf.py  datasets.rst  index.rst  installation.rst
docs/_autosummary/: irdl.get_miracle.rst
docs/_templates/autosummary/: module.rst
src/irdl/: __init__.py  cli.py  downloader.py  fabian.py  ista.py  miracle.py  repositories.py  sofa.py  utils.py
