[project]
name = "irdl"
version = "0.1.0"
description = "Python package to download, unpack and process impulse response datasets."
readme = "README.md"
authors = [
    { name = "Art Pelling", email = "a.pelling@tu-berlin.de" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "numpydoc>=1.10.0",
    "pooch>=1.8.2",
    "pyfar>=0.7.3",
    "typer>=0.17.4",
]
license = "MIT"

[dependency-groups]
dev = ["ruff==0.14.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
irdl = "irdl.main:app"


[tool.basedpyright]
venv = ".venv"
typeCheckingMode = 'off'


[tool.ruff]
src = ["src"]
exclude = ["packages/irdl/src/irdl/repositories.py"]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "ICN", "N", "Q", "W"]
ignore = [
    "D100", "D104", "D401",
    "N803",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/irdl/repositories.py" = ["D"]
