[project]
name = "irdl"
version = "1.0.0a3"
description = "Python package to download, unpack and process impulse response datasets."
readme = "README.md"
authors = [
    { name = "Art Pelling", email = "a.pelling@tu-berlin.de" },
    { name = "Siavash Zaid", email = "siavash.zaid@campus.tu-berlin.de" },
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "h5py<3.15.0",  # some weird conflict with netcdf4
    "numpydoc>=1.10.0",
    "pooch>=1.8.2",
    "pyfar>=0.7.3",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "pydata-sphinx-theme>=0.16.1",
    "ruff==0.14.14",
    "sphinx>=9.0.4",
    "sphinx-click>=6.2.0",
    "sphinx-copybutton>=0.5.2",
]

[project.scripts]
irdl = "irdl.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["irdl"]

[tool.hatch.build.targets.wheel]
package = ["irdl"]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true


[tool.basedpyright]
venv = ".venv"
typeCheckingMode = 'off'


[tool.ruff]
src = ["src"]
exclude = ["src/irdl/repositories.py"]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "ICN", "N", "Q", "W"]
ignore = [
    "D100", "D104", "D401",
    "N803",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"
